src/core-crm/objects/Breach__c/Breach__c.object-meta.xml
<CustomObject>
    <description>The reference list of possible breaches the student can have in relation to student activity or enrolled program activity.</description>
    <label>Breach</label>
    <nameField>
        <label>Breach Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Breaches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>