src/core-crm/objects/Breach__c/fields/Breach_Code__c.field-meta.xml
<CustomField>
    <fullName>Breach_Code__c</fullName>
    <description>The unique business code assigned to the breach</description>
    <label>Breach Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>