src/core-crm/objects/Breach__c/fields/Breach_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Breach_End_Date__c</fullName>
    <description>The date the breach ended</description>
    <label>Breach End Date</label>
    <type>Date</type>
</CustomField>