src/core-crm/objects/Breach__c/fields/Breach_Group__c.field-meta.xml
<CustomField>
    <fullName>Breach_Group__c</fullName>
    <description>The grouping the breach belongs to</description>
    <label>Breach Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>