src/core-crm/objects/Breach__c/fields/Breach_Key__c.field-meta.xml
<CustomField>
    <fullName>Breach_Key__c</fullName>
    <description>The key used by SAMS for the breach</description>
    <label>Breach Key</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>