src/core-crm/objects/Breach__c/fields/Breach_Number__c.field-meta.xml
<CustomField>
    <fullName>Breach_Number__c</fullName>
    <description>The number assigned to the breach in SAMS</description>
    <label>Breach Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>