src/core-crm/objects/Breach__c/fields/Breach_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Breach_Start_Date__c</fullName>
    <description>The date the breach started</description>
    <label>Breach Start Date</label>
    <type>Date</type>
</CustomField>