src/core-crm/objects/Breach__c/fields/Breach_Type__c.field-meta.xml
<CustomField>
    <fullName>Breach_Type__c</fullName>
    <description>The type of the breach</description>
    <label>Breach Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>