src/core-crm/objects/Breach__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The description of the breach</description>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>