src/core-crm/objects/Breach__c/validationRules/End_Date_Is_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Is_Before_Start_Date</fullName>
    <active>true</active>
    <description>Validates Breach End date If Before Breach Start Date</description>
    <errorConditionFormula>AND( OR(ISNEW(),ISCHANGED( Breach_End_Date__c )),Breach_End_Date__c &lt;  Breach_Start_Date__c)</errorConditionFormula>
    <errorDisplayField>Breach_End_Date__c</errorDisplayField>
    <errorMessage>Breach End Date must be after Breach Start Date.</errorMessage>
</ValidationRule>