src/core-crm/objects/Breach__c/validationRules/Start_Date_Is_After_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Is_After_End_Date</fullName>
    <active>true</active>
    <description>Validates Breach Start Date If After Breach End Date</description>
    <errorConditionFormula>AND(OR(ISNEW(),ISCHANGED(Breach_Start_Date__c )),  Breach_Start_Date__c &gt;  Breach_End_Date__c )</errorConditionFormula>
    <errorDisplayField>Breach_Start_Date__c</errorDisplayField>
    <errorMessage>Breach Start Date must be before Breach End Date.</errorMessage>
</ValidationRule>